--- a/src/locale/de/messages.po
+++ b/src/locale/de/messages.po
@@ -6,7 +6,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "POT-Creation-Date: 2018-09-12T18:40:54.619Z\n"
-"PO-Revision-Date: 2018-09-14 19:13+0200\n"
+"PO-Revision-Date: 2018-09-14 19:27+0200\n"
 "Language: de\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
@@ -41,9 +41,17 @@ msgstr "Beteiligungsplan hinzufügen"
 msgid "After you’re finished with modeling your financing round, you can download the scenario as a PDF document and share it with your co-founders, lawyers and investors. The document includes the pre- and post-money valuation of your company, all investments, and convertibles with their resulting share price and the number of shares and, of course, the resulting cap table. At the end of the document, you will also find valuable plots to visualize the new development step of your company."
 msgstr "Nachdem du mit der Modellierung der Finanzierungsrunde fertig bist, kannst du das Szenario als PDF-Dokument herunterladen und mit deinen Mitgründern, Anwälten und Investoren teilen. Das Dokument enthält die Pre- und Post-Money-Valuation deines Startups, alle Investments und Convertibles mit den daraus resultierenden Aktienpreisen, sowie der Anzahl der Aktien und natürlich dem sich daraus ergebendem Cap Table. Am Ende findest du auch wertvolle Plots, um den neuen Entwicklungsschritt deines Unternehmens zu visualisieren."
 
-#: src/pages/pricing.jsx:54 src/pages/pricing.jsx:68 src/pages/pricing.jsx:83
-msgid "All cap table features"
-msgstr "Alle Cap Table-Funktionen"
+#: src/pages/pricing.jsx:68
+msgid "All basic features"
+msgstr "Alles im Standard Paket"
+
+#: src/pages/pricing.jsx:83
+msgid "All premium features"
+msgstr "Alles im Premium Paket"
+
+#: src/components/AllFeatures.jsx:9
+msgid "And Much More"
+msgstr "Und vieles mehr"
 
 #: src/components/AllFeatures.jsx:43
 msgid "Approved Capital Pools"
@@ -176,7 +184,7 @@ msgstr "Finanzierungsrunde umwandeln"
 
 #: src/pages/features/round-modeling.jsx:143
 msgid "Convert to transactions"
-msgstr "Zu Transaktionen umwandeln"
+msgstr "In Transaktionen umwandeln"
 
 #: src/components/AllFeatures.jsx:26
 msgid "Convertible Loans"
@@ -258,6 +266,10 @@ msgstr "Verschlüsselte Verbindung"
 msgid "Enter your email…"
 msgstr "E-Mail-Adresse eingeben…"
 
+#: src/pages/pricing.jsx:79
+msgid "Enterprise"
+msgstr "Enterprise"
+
 #: src/pages/about-us.jsx:165
 msgid "Entrepreneur, Business Angel, Founder of Doodle.com"
 msgstr "Unternehmer, Business Angel, Gründer von Doodle.com"
@@ -266,17 +278,21 @@ msgstr "Unternehmer, Business Angel, Gründer von Doodle.com"
 msgid "Entrepreneur, Technologist, Founder of Doodle.com"
 msgstr "Unternehmer, Technologe, Gründer von Doodle.com"
 
+#: src/pages/pricing.jsx:54
+msgid "Error-free cap table"
+msgstr "Fehlerfreier Cap Table"
+
 #: src/pages/features/reporting.jsx:120
 msgid "Every transaction in your cap table usually comes with a pile of additional documents, like contracts. Get rid of complicated folder structures and attach them directly to your transactions. Ledgy gives you an overview of all documents that you uploaded and their corresponding transactions. Also in your transaction history, you can select any transaction and see all connected documents at a glance.<0/><1/>You can also share your documents by sending a simple link to your shareholders. This eliminates confusion about different versions of documents, as it is often the case when sending documents via email."
 msgstr "Jede Transaktion in deinem Aktienregister enthält normalerweise einen Stapel zusätzlicher Dokumente, wie zum Beispiel Verträge. Befreie dich von komplizierten Ordnerstrukturen und verknüpfe sie einfach direkt mit deinen Transaktionen. Ledgy gibt dir einen Überblick über alle von dir hochgeladenen Dokumente und deren verknüpften Transaktionen. Außerdem kannst du im Transaktionsverlauf beliebige Transaktionen auswählen und alle damit verknüpften Dokumente auf einen Blick einsehen. <0/> <1/> Du kannst Dokumente auch einfach per Link mit deinen Gesellschaftern teilen. Auf diese Weise werden Verwechslungen bei verschiedenen Versionen von Dokumenten vermieden, was häufig beim Senden von Dokumenten per E-Mail der Fall ist."
 
+#: src/pages/pricing.jsx:84
+msgid "Exit modeling (coming soon)"
+msgstr "Exit Modellierung (bald)"
+
 #: src/pages/features/round-modeling.jsx:39
 msgid "Explore new scenarios for upcoming financing rounds interactively"
-msgstr "Erforsche interaktiv neue Szenarien für bevorstehende Finanzierungsrunden"
-
-#: src/pages/pricing.jsx:63
-msgid "Fast-growing Startup"
-msgstr "Fast-growing Startup"
+msgstr "Entwerfe interaktiv neue Szenarien für bevorstehende Finanzierungsrunden"
 
 #: src/components/Features.jsx:82 src/layouts/index.jsx:47
 #: src/layouts/index.jsx:109 src/pages/features/consistency.jsx:16
@@ -292,7 +308,7 @@ msgstr "Warum sie uns vertrauen"
 
 #: src/pages/features/consistency.jsx:141
 msgid "Finished? Go back to the <0>Cap Table</0> page and view the result. At any point in the history of your ownership, Ledgy can draw you a helpful chart that represents the current equity distribution of your company. <1/>You have several views on your cap table at your fingertips. You can assign your shareholders to groups and view the distribution among them. Or you can get a comprehensive overview by viewing the distribution between the different securities, like common shares, preferred shares, convertibles and options."
-msgstr "Fertig? Zurück auf der <0>Cap Table</0> Seite kannst du das Ergebnis sehen. Zu jedem Zeitpunkt der Historie zeigt dir Ledgy hilfreiche Grafiken mit der aktuellen Verteilung im Unternehmen.</1>Du hast mehrere Ansichtsmöglichkeiten für deinen Cap Table zur Verfügung. Nachdem du deine Gesellschafter zu Gruppen hinzugefügt hast, beispielsweise Gründer, Investoren und Mitarbeiter, kannst du die Verteilung zwischen diesen Gruppen analysieren. Oder mach dir ein umfassendes Bild über die Verteilung der verschiedenen Wertpapierarten wie Stamm- und Vorzugsaktien, Wandeldarlehen und Optionen."
+msgstr "Fertig? Zurück auf der <0>Cap Table</0> Seite kannst du das Ergebnis sehen. Zu jedem Zeitpunkt der Historie zeigt dir Ledgy hilfreiche Grafiken mit der aktuellen Verteilung im Unternehmen.<1/>Du hast mehrere Ansichtsmöglichkeiten für deinen Cap Table zur Verfügung. Nachdem du deine Gesellschafter zu Gruppen hinzugefügt hast, beispielsweise Gründer, Investoren und Mitarbeiter, kannst du die Verteilung zwischen diesen Gruppen analysieren. Oder mach dir ein umfassendes Bild über die Verteilung der verschiedenen Wertpapierarten wie Stamm- und Vorzugsaktien, Wandeldarlehen und Optionen."
 
 #: src/pages/security.jsx:72
 msgid "For even better protection of accounts"
@@ -306,7 +322,7 @@ msgstr "Gründer von Meisser Economics, Bitcoin Association Schweiz und Wuala"
 msgid "Free"
 msgstr "Gratis"
 
-#: src/pages/pricing.jsx:69 src/pages/pricing.jsx:84
+#: src/pages/pricing.jsx:85
 msgid "Free cap table import"
 msgstr "Gratis Cap Table-Import"
 
@@ -371,6 +387,10 @@ msgstr "Falls unsere App abstürzt, damit wir den Fehler so schnell wie möglich
 msgid "In the case that your employee shares are implemented as options or phantom options, define a pool of approved capital first. Click the <0>Add pool</0> to create an options or phantom pool of a given share class and a fixed size. Then issue options, phantom options or shares from the approved capital and see key metrics of the pool like the amount still available."
 msgstr "Für Options- oder Phantompläne legst erst einen Pool von bewilligtem Kapital an. Klicke dafür auch <0>Add Pool</0> um einen Optionen- oder Phantompool von einer bestimmten Größe und Aktienklasse anzulegen. Dann kannst du Optionen oder virtuelle Optionen aus diesem bewilligten Kapital vergeben und die zentralen Metriken wie die noch verfügbare Menge verfolgen."
 
+#: src/pages/pricing.jsx:70
+msgid "Incentive plan management"
+msgstr "Beteiligungspläne"
+
 #: src/pages/features/investors.jsx:54
 msgid "Investment overview"
 msgstr "Investment-Übersicht"
@@ -402,7 +422,7 @@ msgstr "Vergebe Optionen aus einem Pool"
 
 #: src/pages/features/consistency.jsx:41
 msgid "Keep the ownership history of your company at a single place. No more shuffling around with different documents shared via email, Dropbox, Google Drive or Slack.<0/>Ledgy will be your single source of truth. And it’s a damn good one!<1/><2/>To get started enter all your ownership transactions into Ledgy. That’s an excellent opportunity to understand what has been going on in your cap table.<3/><4/>Need help? <5>Contact us</5>, and we will assist you to get started with Ledgy."
-msgstr "Behalte die Historie deiner Beteiligungen an einem Ort. Kein hin und her mehr mit verschiedenen Dokumenten, geteilt über Dropbox, Google, Drive oder Slack.<0/>Ledgy wird deine zentrale Informationsquelle für alle Beteiligten. Und eine ziemlich gute noch dazu!<1/></2>Um loszulegen trägst du die Historie der Beteiligungen ein. Unsere Copy-Paste Import Tools werden dir dabei helfen. Das ist eine perfekte Möglichkeit zu verstehen, was in deinem Cap Table so alles passiert ist.<3/><4/>Brauchst du Hilfe? <5>Kontaktiere uns</5> und wir helfen dir dabei mit Ledgy loszulegen."
+msgstr "Behalte die Historie deiner Beteiligungen an einem Ort. Kein hin und her mehr mit verschiedenen Dokumenten, geteilt über Dropbox, Google, Drive oder Slack.<0/>Ledgy wird deine zentrale Informationsquelle für alle Beteiligten. Und eine ziemlich gute noch dazu!<1/><2/>Um loszulegen trägst du die Historie der Beteiligungen ein. Unsere Copy-Paste Import Tools werden dir dabei helfen. Das ist eine perfekte Möglichkeit zu verstehen, was in deinem Cap Table so alles passiert ist.<3/><4/>Brauchst du Hilfe? <5>Kontaktiere uns</5> und wir helfen dir dabei mit Ledgy loszulegen."
 
 #: src/pages/features/esop.jsx:147
 msgid "Keep your employees engaged"
@@ -540,9 +560,9 @@ msgstr "Code-Audits"
 msgid "Phantom Programs"
 msgstr "Virtuelle Beteiligungen"
 
-#: src/pages/pricing.jsx:85
-msgid "Premium support"
-msgstr "Premium-Support"
+#: src/pages/pricing.jsx:64
+msgid "Premium"
+msgstr "Premium"
 
 #: src/layouts/index.jsx:48 src/layouts/index.jsx:110 src/pages/pricing.jsx:12
 #: src/pages/pricing.jsx:20
@@ -569,7 +589,7 @@ msgstr "Mehr erfahren"
 
 #: src/components/AllFeatures.jsx:46
 msgid "Read-only Access"
-msgstr "Nur-Lese-Zugriff"
+msgstr "Lese-Zugriff"
 
 #: src/pages/features/reporting.jsx:72
 msgid "Remember that day last year during tax season when you had to send holding confirmations to each shareholder, filling out boring Word templates by hand?<0/><1/>We’ve got the solution for you. With a single click, Ledgy creates nicely formatted holding confirmations for all of your shareholders and send them directly via email.<2/><3/>Reduce hours of tedious work to just a few seconds. Hurray!"
@@ -591,6 +611,10 @@ msgstr "Berichte und Dokumente"
 #: src/pages/features/round-modeling.jsx:73
 msgid "Round Modeling"
 msgstr "Round Modeling"
+
+#: src/pages/pricing.jsx:55
+msgid "Round modeling"
+msgstr "Rundenmodellierung"
 
 #: src/pages/features/reporting.jsx:16
 msgid "Save painful work inserting numbers into templates. Automated documents and reports at your fingertips."
@@ -762,25 +786,17 @@ msgstr "Zwei-Faktor-Authentifizierung"
 msgid "Unable to find your perfect fit?<0/><1>Drop us an email</1> or use the chat right on this page."
 msgstr "Nichts passendes dabei?<0/><1>Schick’ uns eine Email</1> oder benutze den Chat rechts."
 
-#: src/pages/pricing.jsx:78
-msgid "Unicorn"
-msgstr "Unicorn"
-
 #: src/components/AllFeatures.jsx:28
 msgid "Unlimited Share Classes"
 msgstr "Unbegrenzte Anzahl Aktienklassen"
 
-#: src/pages/pricing.jsx:82
+#: src/pages/pricing.jsx:69
 msgid "Unlimited shareholders"
 msgstr "Unbegrenzte Anzahl Gesellschafter"
 
 #: src/pages/pricing.jsx:53
-msgid "Up to 20 shareholders"
-msgstr "Bis zu 20 Stakeholder"
-
-#: src/pages/pricing.jsx:67
-msgid "Up to 50 shareholders"
-msgstr "Bis zu 50 Gesellschafter"
+msgid "Up to 15 shareholders"
+msgstr "Bis zu 15 Stakeholder"
 
 #: src/pages/privacy.jsx:55
 msgid "Usage statistics"
@@ -898,11 +914,11 @@ msgstr "Du befindest dich in guter Gesellschaft"
 msgid "cap table, stock ledger, share register, startup, round modeling, equity, esop, reporting, investors"
 msgstr "Cap Table, Aktienregister, Startup, Modellierung von Finanzierungsrunden, Aktien, esop, Reporting, Investoren"
 
-#: src/pages/pricing.jsx:62 src/pages/pricing.jsx:77
+#: src/pages/pricing.jsx:63 src/pages/pricing.jsx:78
 msgid "coming soon"
 msgstr "Demnächst"
 
-#: src/pages/pricing.jsx:65 src/pages/pricing.jsx:80
+#: src/pages/pricing.jsx:66 src/pages/pricing.jsx:81
 msgid "per shareholder per month"
 msgstr "pro Gesellschafter pro Monat"
 
@@ -910,10 +926,10 @@ msgstr "pro Gesellschafter pro Monat"
 msgid "the Investor Portfolio"
 msgstr "das Investoren-Portfolio"
 
-#: src/pages/pricing.jsx:64
+#: src/pages/pricing.jsx:65
 msgid "€2"
 msgstr "€2"
 
-#: src/pages/pricing.jsx:79
+#: src/pages/pricing.jsx:80
 msgid "€4"
 msgstr "€4"
