--- a/src/locale/en/messages.po
+++ b/src/locale/en/messages.po
@@ -900,7 +900,7 @@ msgid "What we may collect and why"
 msgstr "What we may collect and why"
 
 #: src/pages/features.jsx:63
-msgid "What’s the stake percentage of the founders after a VC invests $2,000,000 at a valuation of $7,500,000 taking into account the 2 outstanding convertible loans and keeping the ESOP pool at 10% while only diluting existing shareholders?<0/>Honestly, we don’t know. But Ledgy does.<1/>Exit modeling is coming soon!"
+msgid "What’s the stake percentage of the founders after a VC invests $2,000,000 at a valuation of $7,500,000 taking into account the 2 outstanding convertible loans and keeping the ESOP pool at 10% while only diluting existing shareholders?<0/>How does the capped participating liquidation preference that comes with this investment influence my exit strategy?<1/>Honestly, we don’t know. But Ledgy does."
 msgstr "What’s the stake percentage of the founders after a VC invests $2,000,000 at a valuation of $7,500,000 taking into account the 2 outstanding convertible loans and keeping the ESOP pool at 10% while only diluting existing shareholders?<0/>Honestly, we don’t know. But Ledgy does.<1/>Exit modeling is coming soon!"
 
 #: src/pages/features/esop.jsx:110
