--- a/src/locale/en/messages.po
+++ b/src/locale/en/messages.po
@@ -294,8 +294,8 @@ msgid "Every transaction in your cap table usually comes with a pile of addition
 msgstr "Every transaction in your cap table usually comes with a pile of additional documents, like contracts. Get rid of complicated folder structures and attach them directly to your transactions. Ledgy gives you an overview of all documents that you uploaded and their corresponding transactions. Also in your transaction history, you can select any transaction and see all connected documents at a glance.<0/><1/>You can also share your documents by sending a simple link to your shareholders. This eliminates confusion about different versions of documents, as it is often the case when sending documents via email."
 
 #: src/pages/pricing.jsx:87
-msgid "Exit modeling (coming soon)"
-msgstr "Exit modeling (coming soon)"
+msgid "Exit modeling"
+msgstr "Exit modeling"
 
 #: src/pages/features/round-modeling.jsx:40
 msgid "Explore new scenarios for upcoming financing rounds interactively"
@@ -901,7 +901,7 @@ msgstr "What we may collect and why"
 
 #: src/pages/features.jsx:63
 msgid "What’s the stake percentage of the founders after a VC invests $2,000,000 at a valuation of $7,500,000 taking into account the 2 outstanding convertible loans and keeping the ESOP pool at 10% while only diluting existing shareholders?<0/>How does the capped participating liquidation preference that comes with this investment influence my exit strategy?<1/>Honestly, we don’t know. But Ledgy does."
-msgstr "What’s the stake percentage of the founders after a VC invests $2,000,000 at a valuation of $7,500,000 taking into account the 2 outstanding convertible loans and keeping the ESOP pool at 10% while only diluting existing shareholders?<0/>Honestly, we don’t know. But Ledgy does.<1/>Exit modeling is coming soon!"
+msgstr "What’s the stake percentage of the founders after a VC invests $2,000,000 at a valuation of $7,500,000 taking into account the 2 outstanding convertible loans and keeping the ESOP pool at 10% while only diluting existing shareholders?<0/>How does the capped participating liquidation preference that comes with this investment influence my exit strategy?<1/>Honestly, we don’t know. But Ledgy does."
 
 #: src/pages/features/esop.jsx:110
 msgid "When it’s time to exercise option grants, Ledgy calculates for you the amount that is already vested at a given date and lets you exercise parts or the full option grant.<0/><1/>Did an employee leave the company? Ledgy supports terminating part or the whole option grant.<2/><3/>Filter the transactions by an employee to see all their transactions (option grant, terminations and exercises) at a glance."
